<resources>
    <string name="app_name">HuanPet</string>
    <string name="jiyangxuzhi">1.寄养的动物必须身体健康，而且要经过免疫。寄养对宠物总是有或多或少的心理影响，突然来到陌生的环境，多少会有点情绪紧张，也可能会情绪抑郁，甚至导致食欲不振。所以，主人一定要带着宠物前往察看寄养场地，以确定宠物是否喜欢新的居住环境。</string>
    <string name="two">2. 此外，宠物可能会因为陌生而发生打斗现象，最好让宠物和新伙伴们提前接触几天。主人应该向寄养机构提供宠物的食物，每次的食量标准、宠物的喜好等资料，最好把宠物喜欢的玩具带上。年纪太小的动物不适宜寄养，因为幼小的动物抵抗力弱，适应能力低，在寄养场所和容易感染细菌，比较危险。</string>
    <string name="three">3.据宠物医院的工作人员介绍，寄养对宠物来说，或多或少会有一些心理影响，尤其是猫、狗。因为它们是群居动物，比较通人性，与主人接触事件长了，突然到一个陌生的环境，肯定会有一些不适的反应，因此寄养时间一般不要超过5天。如果所养的小动物在平时就有过分认生的表现，建议还是不要选择寄养。因为这期间动物是非常容易生病的，个别宠物还会出现绝食的情况甚至死亡。</string>
    <string name="four">4.一次寄养最好不要超过5天。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--修改个人信息-->
    <string name="nike_face">头像</string>
    <string name="nick_name">名称</string>
    <string name="sexy">性别</string>
    <string name="ddyymm">出生年月</string>
    <string name="phone">手机</string>
    <string name="wachat">微信</string>
    <string name="QQ">QQ</string>
    <string name="address">联系地址</string>
    <string name="Take_pictures">拍照</string>
    <string name="album">相册</string>
    <string name="all_images">全部图片</string>
    <string name="cancel">取消</string>
    <string name="boy">男</string>
    <string name="gril">女</string>
    <string name="name_edittext">请输入16字以内的名称(中文,数字,字母)</string>
    <string name="name_phone">输入手机号</string>
    <string name="name_wechat">输入微信号</string>
    <string name="name_QQ">输入QQ号</string>
    <string name="name_city">输入具体街道-小区-栋-号</string>
    <string name="title_activity_modify_the_name">ModifyTheNameActivity</string>
    <string name="title_activity_we_chat">WeChatActivity</string>
    <string name="title_activity_phone">PhoneActivity</string>
    <string name="title_activity_qq">QQActivity</string>
    <string name="title_activity_contact_address">ContactAddressActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <!-- 自定义 -->
    <color name="edit_font_color">#B7B7B7</color>
    <string name="register_welcome_text">欢迎您加入宠物寄养</string>
    <string name="register_phone_hint">请输入手机号码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_code_hint">请输入验证码</string>
    <string name="wangji_pwd">忘记密码</string>
    <string name="input_pwd_hint">请输入密码</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_name_hint">请输入用户名</string>
</resources>
