<?xml version="1.0" encoding="utf-8"?>
<com.example.huanpet.custom.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.huanpet.view.know.KnowActivity">
<com.example.huanpet.utils.CustomTool
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_heightPercent="10%"
    android:id="@+id/know_custom"></com.example.huanpet.utils.CustomTool>
    <TextView
        android:id="@+id/tx"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="20%"
        android:textSize="20dp"
        android:text="@string/jiyangxuzhi"/>
    <TextView
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="28%"
        android:textSize="20dp"
        android:text="@string/two"/>
    <TextView
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="30%"
        android:textSize="20dp"
        android:text="@string/three"/>
    <TextView
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="5%"
        android:textSize="20dp"
        android:text="@string/four"/>
</com.example.huanpet.custom.PercentLinearLayout>
