<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/back_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="取消"
            android:textColor="@color/yellow02"
            android:background="@android:color/transparent"
            android:layout_margin="10dp"
            android:onClick="click"
            android:textSize="@dimen/sp16"/>

        <Button
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/dp10"
            android:paddingTop="@dimen/dp10"
            android:text="登录"
            android:onClick="click"
            android:background="@android:color/transparent"
            android:textColor="@color/yellow02"
            android:textSize="@dimen/sp16" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_marginTop="@dimen/dp10"
        android:numeric="integer"
        android:text="@string/register_welcome_text"
        android:textSize="@dimen/sp25" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp5"
            android:layout_marginRight="@dimen/dp5"
            android:layout_marginTop="@dimen/dp5"
            android:background="@drawable/input_bar_bg_normal"
            android:hint="@string/register_phone_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="@dimen/dp7"
            android:textColor="@color/edit_font_color"
            android:textSize="@dimen/sp18" />

        <Button
            android:id="@+id/btn_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_phone"
            android:layout_alignRight="@+id/edit_phone"
            android:layout_marginBottom="3dp"
            android:background="@drawable/get_code"
            android:onClick="click"
            android:padding="5dp"
            android:textColor="@color/yellow02"
            android:text="@string/register_get_code"
            android:textSize="15sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edit_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_bar_bg_normal"
        android:hint="@string/register_code_hint"
        android:maxLength="4"
        android:numeric="integer"
        android:padding="@dimen/dp7"
        android:textColor="@color/edit_font_color"
        android:textSize="@dimen/sp18" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_bar_bg_normal"
        android:hint="请输入用户名"
        android:padding="@dimen/dp7"
        android:textColor="@color/edit_font_color"
        android:textSize="@dimen/sp18" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_bar_bg_normal"
        android:hint="设置6位数字密码"
        android:padding="@dimen/dp7"
        android:password="true"
        android:textColor="@color/edit_font_color"
        android:textSize="@dimen/sp18" />

    <ImageButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="@dimen/dp15"
        android:background="@drawable/register_btn"
        android:onClick="click" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="@dimen/dp20"
        android:gravity="center"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/edit_font_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="使用第三方账号注册"
            android:textColor="@color/edit_font_color"
            android:textSize="@dimen/sp18" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/edit_font_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/main_login_qq"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:onClick="click"
            android:src="@drawable/login_qq" />

        <ImageView
            android:id="@+id/main_login_wachat"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/login_weixin" />
    </LinearLayout>
</LinearLayout>
